# cmake_practice

./: README.md
backup/cmake/t2/: CMakeLists.txt
backup/cmake/t2/doc/: hello.txt
backup/cmake/t2/src/: CMakeLists.txt  main.c
backup/cmake/t3/: CMakeLists.txt
backup/cmake/t3/lib/: CMakeLists.txt  hello.c  hello.h
